# o2-processing-utils

./: Makefile  README.md  config.example.json  o2_processing_utils.yml  pyproject.toml
scripts/: publish-pypi
src/: Pbmm2Workflow.py  commands.py  config_utils.py  constants.py  env_utils.py  file_utils.py  logging_utils.py  preprocess_files.py  qc_utils.py  run_pbmm2.py  run_qc.py
test/: test.py
