[tool.poetry]
name = "o2-processing-utils"
version = "0.1.1"
description = "Runs a variety of bioinformatics tools on O2 (HMS' HPC), such as long read alignment and QC"
authors = ["William Feng <william_feng@hms.harvard.edu>", "Alexander Veit <alexander_veit@hms.harvard.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/smaht-dac/o2-processing-utils"
repository = "https://github.com/smaht-dac/o2-processing-utils"
packages = [
  { include="src", from="." }
]
include=["src"]

classifiers = [
  'License :: OSI Approved :: MIT License',
  'Natural Language :: English',
  'Operating System :: POSIX :: Linux',

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate whether you support Python 2, Python 3 or both.
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
click = "^8.1.3"
pydantic = "^2.5.0"
rich = "^13.7.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
o2p-search-log = "src.commands:cmd_search_log"
o2p-create-summary-qc-file = "src.commands:cmd_create_summary_qc_file"
o2p-print-config = "src.commands:cmd_print_config"
o2p-run-pbmm2-workflow = "src.commands:cmd_run_pbmm2_workflow"
o2p-reset-pbmm2-workflow = "src.commands:cmd_reset_pbmm2_workflow"